--- a/signin/Mypage.html
+++ b/signin/Mypage.html
@@ -23,18 +23,16 @@
                 <h1 id="mypage-header">마이 페이지</h1>
                 
                 <form id="mypage-form">
-                <h1 id="userid">ID</h1>
-                <h1 id="userid-text">admin</h1>
-                <h1 id="username">이름</h1>
-                <h1 id="username-text">홍길동</h1>
-                <h1 id="userphnum">휴대폰 번호</h1>
-                <h1 id="userphnum-text">010-1234-1234</h1>
-                <h1 id="useremail">e-mail</h1>
-                <h1 id="useremail-text">email@naver.com</h1>
-
-                  <!-- <input type="text" name="username" id="username-field" class="login-form-field" placeholder="Username">
-                  <input type="password" name="password" id="password-field" class="login-form-field" placeholder="Password">
-                  <input type="submit" value="Login" id="login-form-submit"> -->
+                  <h1 id="userid">아이디</h1>
+                  <h1 id="userid-text">admin</h1>
+                  <h1 id="userpassword">비밀번호</h1>
+                  <h1 id="userpassword-text">admin</h1>
+                  <h1 id="username">이름</h1>
+                  <h1 id="username-text">홍길동</h1>
+                  <h1 id="userphnum">휴대폰 번호</h1>
+                  <h1 id="userphnum-text">010-1234-1234</h1>
+                  <h1 id="useremail">이메일</h1>
+                  <h1 id="useremail-text">email@naver.com</h1>
                 </form>
               
               </main>
