--- a/signin/Mypage.html
+++ b/signin/Mypage.html
@@ -4,7 +4,7 @@
   <title>마이 페이지</title>
   <link rel="icon" href="/LicenseLab/favicon.png" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
-    <link rel="stylesheet" href="/LicenseLab/css/login.css">
+    <link rel="stylesheet" href="/LicenseLab/css/Mypage.css">
     <link rel="stylesheet" href="/LicenseLab/css/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,16 +23,16 @@
                 <h1 id="mypage-header">마이 페이지</h1>
                 
                 <form id="mypage-form">
-                  <h1 id="userid">아이디</h1>
-                  <h1 id="userid-text">admin</h1>
-                  <h1 id="userpassword">비밀번호</h1>
-                  <h1 id="userpassword-text">admin</h1>
-                  <h1 id="username">이름</h1>
-                  <h1 id="username-text">홍길동</h1>
-                  <h1 id="userphnum">휴대폰 번호</h1>
-                  <h1 id="userphnum-text">010-1234-1234</h1>
-                  <h1 id="useremail">이메일</h1>
-                  <h1 id="useremail-text">email@naver.com</h1>
+                  <h1 id="main_text">아이디</h1>
+                  <h1 id="sub_text">admin</h1>
+                  <h1 id="main_text">비밀번호</h1>
+                  <h1 id="sub_text">admin</h1>
+                  <h1 id="main_text">이름</h1>
+                  <h1 id="sub_text">홍길동</h1>
+                  <h1 id="main_text">휴대폰 번호</h1>
+                  <h1 id="sub_text">010-1234-1234</h1>
+                  <h1 id="main_text">이메일</h1>
+                  <h1 id="sub_text">email@naver.com</h1>
                 </form>
               
               </main>
