--- a/signin/Mypage.html
+++ b/signin/Mypage.html
@@ -25,7 +25,7 @@
                 <form id="mypage-form">
                   <h1 id="main_text">아이디</h1>
                   <h1 id="sub_text">admin</h1>
-                  <h1 id="main_text">비밀번호</h1>
+                  <h1 id="main_text">******</h1>
                   <h1 id="sub_text">admin</h1>
                   <h1 id="main_text">이름</h1>
                   <h1 id="sub_text">홍길동</h1>
