--- a/signin/Mypage.html
+++ b/signin/Mypage.html
@@ -23,18 +23,28 @@
                 <h1 id="mypage-header">마이 페이지</h1>
                 
                 <form id="mypage-form">
-                  <h1 id="main_text">아이디</h1>
-                  <h1 id="sub_text">admin</h1>
-                  <h1 id="main_text">******</h1>
-                  <h1 id="sub_text">admin</h1>
-                  <h1 id="main_text">이름</h1>
-                  <h1 id="sub_text">홍길동</h1>
-                  <h1 id="main_text">휴대폰 번호</h1>
-                  <h1 id="sub_text">010-1234-1234</h1>
-                  <h1 id="main_text">이메일</h1>
-                  <h1 id="sub_text">email@naver.com</h1>
+                  <div>
+                    <h1 id="main_text">아이디</h1>
+                    아이디 : <input type="text" name="username" id="main_text" value="admin">
+                    <h1 id="sub_text">admin</h1>
+                  </div>
+                  <div>
+                    <h1 id="main_text">비밀번호</h1>
+                    <h1 id="sub_text">*********</h1>
+                  </div>
+                  <div>
+                    <h1 id="main_text">이름</h1>
+                    <h1 id="sub_text">홍길동</h1>
+                  </div>
+                  <div>
+                    <h1 id="main_text">휴대폰 번호</h1>
+                    <h1 id="sub_text">010-1234-1234</h1>
+                  </div>
+                  <div>
+                    <h1 id="main_text">이메일</h1>
+                    <h1 id="sub_text">email@naver.com</h1>
+                  </div>
                 </form>
-              
               </main>
             </div>
               <footer data-include="/LicenseLab/include/footer.html"></footer>
