--- a/signin/Mypage.html
+++ b/signin/Mypage.html
@@ -23,16 +23,21 @@
                 <h1 id="mypage-header">마이 페이지</h1>
                 
                 <form id="mypage-form">
+                  <div>
                     아이디 : <input type="text" name="username" id="main_text" value="admin">
-
+                  </div>
+                  <div>
                     비밀번호 : <input type="text" name="username" id="main_text" value="*********">
-
+                  </div>
+                  <div>
                     이름 : <input type="text" name="username" id="main_text" value="홍길동">
-
+                  </div>
+                  <div>
                     휴대폰 번호 : <input type="text" name="username" id="main_text" value="010-1234-1234">
-
+                  </div>
+                  <div>
                     이메일 : <input type="text" name="username" id="main_text" value="e-mail@email.com">
-
+                  </div>
                 </form>
               </main>
             </div>
