--- a/signin/Mypage.html
+++ b/signin/Mypage.html
@@ -38,6 +38,10 @@
                   <div>
                     이메일 : <input type="text" name="username" id="main_text" value="e-mail@email.com">
                   </div>
+                  <div>
+                    <input type="button" id="userBT" value="회원정보 수정" onclick='alert("회원정보가 수정되었습니다!")'>
+                    <input type="button" id="pasBT" value="비밀번호 수정" onclick='alert("비밀번호가 수정되었습니다!")'>
+                  </div>
                 </form>
               </main>
             </div>
