--- a/signin/Mypage.html
+++ b/signin/Mypage.html
@@ -14,6 +14,7 @@
     <script src="/LicenseLab/js/includeHTML.js" defer></script>
     <script src="/LicenseLab/js/login.js" defer></script>
     <script src="/LicenseLab/js/main.js"></script>
+    <script src="js/mypage.js"></script>
   </head>
   <body>
     <header data-include="/LicenseLab/include/header.html"></header>
@@ -24,23 +25,28 @@
                 
                 <form id="mypage-form">
                   <div>
-                    아이디 : <input type="text" name="username" id="main_text" value="admin">
+                    아이디 : <input type="text" name="userid" id="main_text" value="admin">
                   </div>
+
                   <div>
-                    비밀번호 : <input type="text" name="username" id="main_text" value="*********">
+                    비밀번호 : <input type="text" name="password" id="main_text" value="*********">
                   </div>
+
                   <div>
                     이름 : <input type="text" name="username" id="main_text" value="홍길동">
                   </div>
+
                   <div>
-                    휴대폰 번호 : <input type="text" name="username" id="main_text" value="010-1234-1234">
+                    휴대폰 번호 : <input type="text" name="usernum" id="main_text" value="010-1234-1234">
                   </div>
+
                   <div>
-                    이메일 : <input type="text" name="username" id="main_text" value="e-mail@email.com">
+                    이메일 : <input type="text" name="useremail" id="main_text" value="e-mail@email.com">
                   </div>
+                  
                   <div>
-                    <input type="button" id="userBT" value="회원정보 수정" onclick='alert("회원정보가 수정되었습니다!")'>
-                    <input type="button" id="pasBT" value="비밀번호 수정" onclick='alert("비밀번호가 수정되었습니다!")'>
+                    <button>비밀번호 변경</button>
+                    <button>프로필 편집</button>
                   </div>
                 </form>
               </main>
