--- a/signin/Mypage.html
+++ b/signin/Mypage.html
@@ -13,7 +13,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Material+Icons+Outlined" rel="stylesheet" />
     <script src="/LicenseLab/js/includeHTML.js" defer></script>
     <script src="/LicenseLab/js/login.js" defer></script>
-    <script src="/LicenseLab/js/main.js"></script>
+    <!-- <script src="/LicenseLab/js/main.js"></script> -->
     <script src="js/mypage.js"></script>
   </head>
   <body>
