--- a/signin/Mypage.html
+++ b/signin/Mypage.html
@@ -25,23 +25,24 @@
                 
                 <form id="mypage-form">
                   <div>
-                    아이디 : <input type="text" name="userid" id="main_text" value="admin">
+                    <strong id="user_id">admin</strong><br/>
+                    <!-- 아이디 : <input type="text" id="user_id" value="admin"> -->
                   </div>
 
                   <div>
-                    비밀번호 : <input type="text" name="password" id="main_text" value="*********">
+                    비밀번호 : <input type="text" id="user_pass" value="*********">
                   </div>
 
                   <div>
-                    이름 : <input type="text" name="username" id="main_text" value="홍길동">
+                    이름 : <input type="text" id="user_name" value="홍길동">
                   </div>
 
                   <div>
-                    휴대폰 번호 : <input type="text" name="usernum" id="main_text" value="010-1234-1234">
+                    휴대폰 번호 : <input type="text" id="user_num" value="010-1234-1234">
                   </div>
 
                   <div>
-                    이메일 : <input type="text" name="useremail" id="main_text" value="e-mail@email.com">
+                    이메일 : <input type="text" id="user_email" value="e-mail@email.com">
                   </div>
                   
                   <div>
