--- a/signin/Mypage.html
+++ b/signin/Mypage.html
@@ -13,12 +13,12 @@
   <link href="https://fonts.googleapis.com/css2?family=Material+Icons+Outlined" rel="stylesheet" />
     <script src="/LicenseLab/js/includeHTML.js" defer></script>
     <script src="/LicenseLab/js/login.js" defer></script>
-    <!-- <script src="/LicenseLab/js/main.js"></script> -->
-    <script src="js/mypage.js"></script>
+    <script src="/LicenseLab/js/main.js"></script>
+    <script src="/LicenseLab/js/mypage.js"></script>
   </head>
   <body>
     <header data-include="/LicenseLab/include/header.html"></header>
-    <div class="Mybody">
+    <div id="Mybody">
               <main id="main-holder">
                
                 <h1 id="mypage-header">마이 페이지</h1>
@@ -45,9 +45,9 @@
                     이메일 : <input type="text" id="user_email" value="e-mail@email.com">
                   </div>
                   
-                  <div>
+                  <div id="button">
                     <button>비밀번호 변경</button>
-                    <button>프로필 편집</button>
+                    <button id="modify">프로필 편집</button>
                   </div>
                 </form>
               </main>
