--- a/signin/Mypage.html
+++ b/signin/Mypage.html
@@ -14,7 +14,7 @@
     <script src="/LicenseLab/js/includeHTML.js" defer></script>
     <script src="/LicenseLab/js/login.js" defer></script>
     <script src="/LicenseLab/js/main.js"></script>
-    <script src="/LicenseLab/js/mypage.js"></script>
+    <!-- <script src="/LicenseLab/js/mypage.js"></script> -->
   </head>
   <body>
     <header data-include="/LicenseLab/include/header.html"></header>
