--- a/signin/Mypage.html
+++ b/signin/Mypage.html
@@ -12,9 +12,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Material+Icons+Outlined" rel="stylesheet" />
     <script src="/LicenseLab/js/includeHTML.js" defer></script>
-    <script src="/LicenseLab/js/login.js" defer></script>
     <script src="/LicenseLab/js/main.js"></script>
-    <!-- <script src="/LicenseLab/js/mypage.js"></script> -->
+    <script src="/LicenseLab/js/mypage.js" defer></script>
   </head>
   <body>
     <header data-include="/LicenseLab/include/header.html"></header>
@@ -26,8 +25,7 @@
                 <form id="mypage-form">
                   <div>
                     아이디 : <strong id="user_id">admin</strong><br/>
-                    <!-- 아이디 : <input type="text" id="user_id" value="admin"> -->
-                 
+                    
                     비밀번호 : <strong id="user_pass">*****</strong><br/>
 
                     이름 : <strong id="user_name">홍길동</strong><br/>
@@ -37,7 +35,6 @@
                     이메일 : <strong id="user_email">email@naver.com</strong><br/>
                   </div>
                   <div id="modify">
-                    <!-- <button>비밀번호 변경</button> -->
                     <button>프로필 편집</button>
                   </div>
                 </form>
