--- a/signin/Mypage.html
+++ b/signin/Mypage.html
@@ -12,8 +12,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Material+Icons+Outlined" rel="stylesheet" />
     <script src="/LicenseLab/js/includeHTML.js" defer></script>
-    <script src="/LicenseLab/js/main.js"></script>
-    <script src="/LicenseLab/js/mypage.js" defer></script>
+    <script src="/LicenseLab/js/main.js" defer></script>
+    <script src="/LicenseLab/js/mypage.js"></script>
   </head>
   <body>
     <header data-include="/LicenseLab/include/header.html"></header>
