--- a/index.html
+++ b/index.html
@@ -44,7 +44,10 @@
   </script> -->
   <script defer src="./js/youtube.js"></script>
   <script defer src="./js/main.js"></script>
-  <script src="./js/includeHTML.js" defer></script> <!--헤더 푸터 나누는부분-->
+  <script src="./js/includeHTML.js" defer></script> 
+  script src="/LicenseLab/js/mypage.js" defer></script>
+  <script src="/LicenseLab/js/login.js" defer></script>
+  <!--헤더 푸터 나누는부분-->
 </head>
 <body>
 <!-- HEADER -->
