--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <a href="#" onclick="location.href='signin/login.html'">Sign In</a>
         </li>
         <li>
-          <a href="javascript:void(0)"onclick="location.href='signin/Mypage.html'">My Page</a>
+          <a href="#"onclick="location.href='signin/Mypage.html'">My Page</a>
         </li>
       </ul>
       <div class="search">
