--- a/signin/Mypage.html
+++ b/signin/Mypage.html
@@ -34,8 +34,9 @@
                   
                     이메일 : <strong id="user_email">email@naver.com</strong><br/>
                   </div>
-                  <div id="modify">
-                    <button>프로필 편집</button>
+                  <div>
+                    <button id="modify">회원정보 수정</button>
+                    <button id="pass_modify">비밀번호 수정</button>
                   </div>
                 </form>
               </main>
