--- a/signin/Mypage.html
+++ b/signin/Mypage.html
@@ -26,7 +26,7 @@
                   <div>
                     아이디 : <strong id="user_id">admin</strong><br/>
                     
-                    비밀번호 : <strong id="user_pass">*****</strong><br/>
+                    비밀번호 : <strong id="user_psw">*****</strong><br/>
 
                     이름 : <strong id="user_name">홍길동</strong><br/>
                  
@@ -36,7 +36,7 @@
                   </div>
                   <div>
                     <button id="modify">회원정보 수정</button>
-                    <button id="pass_modify">비밀번호 수정</button>
+                    <button id="psw_modify">비밀번호 수정</button>
                   </div>
                 </form>
               </main>
