--- a/mainsub.html
+++ b/mainsub.html
@@ -56,7 +56,7 @@
   <div class="inner">
     <a href="/" class="logo">
       <div class="site-logo">
-        <a href="#" onclick="location.href='index.html'">LicenseLab</a>
+        <a href="#" onclick="location.href='mainsub.html'">LicenseLab</a>
       </div>
     </a>
     <div class="sub-menu">
