--- a/index.html
+++ b/index.html
@@ -44,10 +44,8 @@
   </script> -->
   <script defer src="./js/youtube.js"></script>
   <script defer src="./js/main.js"></script>
-  <script src="./js/includeHTML.js" defer></script> 
-  script src="/LicenseLab/js/mypage.js" defer></script>
-  <script src="/LicenseLab/js/login.js" defer></script>
-  <!--헤더 푸터 나누는부분-->
+  <script src="./js/includeHTML.js" defer></script>
+   <!--헤더 푸터 나누는부분-->
 </head>
 <body>
 <!-- HEADER -->
@@ -64,10 +62,7 @@
     <div class="sub-menu">
       <ul class="menu">
         <li>
-          <a href="#" onclick="location.href='signin/login.html'">Sign In</a>
-        </li>
-        <li>
-          <a href="#"onclick="location.href='signin/Mypage.html'">My Page</a>
+          <a id="lgin" href="#" onclick="location.href='signin/login.html'">Sign In</a>
         </li>
       </ul>
       <div class="search">
