--- a/mainsub.html
+++ b/mainsub.html
@@ -62,7 +62,7 @@
     <div class="sub-menu">
       <ul class="menu">
         <li>
-          <a id="lgin" href="#" onclick="location.href='signin/index.html'">Sign Out</a>
+          <a id="lgin" href="#" onclick="location.href='index.html'">Sign Out</a>
         </li>
         <li>
           <a href="#"onclick="location.href='signin/Mypage.html'">My Page</a>
