--- a/index.html
+++ b/index.html
@@ -384,14 +384,14 @@
       <div class="post-body ">
         <p><strong>토익이란?</strong></p>
         
-        <h2><a href="./pages/TOEIC.html">토익(TOEIC)은 영어를 모국어로 하지 않는 사람들을 대상으로 언어 본래의 기능인 커뮤니케이션 능력을 평가하는 시헙이다. 일상생활이나 국제업무 등에 필요한 실용영어에 대한 평가가 이루어진다.</a></h2>
+        <h2><a href="./pages/TOEICsub.html">토익(TOEIC)은 영어를 모국어로 하지 않는 사람들을 대상으로 언어 본래의 기능인 커뮤니케이션 능력을 평가하는 시헙이다. 일상생활이나 국제업무 등에 필요한 실용영어에 대한 평가가 이루어진다.</a></h2>
         <br>
         <h5 class="dDay">D-day</h5>
         <p><strong>시행기관</strong> 미국 ETS</p>
         <p><strong>시 험 일</strong> <span class="colorPoint">&nbsp;2023-11-26</span></p>
         <p><strong>접 수 일</strong> <span class="colorPoint">&nbsp;공시 예정</span></p>
         <br>
-        <a href="./pages/TOEIC.html" title="read more" class="more"><button type="button">자격증 상세 보기</button></a>
+        <a href="./pages/TOEICsub.html" title="read more" class="more"><button type="button">자격증 상세 보기</button></a>
       </div>
     </article> <!-- /.posts -->
   
@@ -407,14 +407,14 @@
         <div class="post-body ">
           <p><strong>정보처리기사란?</strong></p>
           
-          <h2><a href="./pages/정처기.html">정보처리기사는 컴퓨터 지식 및 기술 전문 인력 양성을 위해 제정된 제도이다. 자격증 취득 후 분석, 설계, 구현, 시험, 운영 및 유지 보수 등을 수행할 수 있다.</a></h2>
+          <h2><a href="./pages/정처기sub.html">정보처리기사는 컴퓨터 지식 및 기술 전문 인력 양성을 위해 제정된 제도이다. 자격증 취득 후 분석, 설계, 구현, 시험, 운영 및 유지 보수 등을 수행할 수 있다.</a></h2>
           <br><br>
           <h5 class="dDay">D-day</h5>
           <p><strong>시행기관</strong> 한국산업인력공단</p>
           <p><strong>시 험 일</strong> <span class="colorPoint">&nbsp;공시 예정</span></p>
           <p><strong>접 수 일</strong> <span class="colorPoint">&nbsp;공시 예정</span></p>
           <br>
-          <a href="./pages/정처기.html" title="read more" class="more"><button type="button">자격증 상세 보기</button></a>
+          <a href="./pages/정처기sub.html" title="read more" class="more"><button type="button">자격증 상세 보기</button></a>
         </div>
     </article> <!-- /.posts -->
   
