--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
         <li>
           <a id="lgin" href="#" onclick="location.href='signin/login.html'">Sign In</a>
         </li>
+        <li>
+          <a href="#"onclick="location.href='signin/login.html'">My Page</a>
+        </li>
       </ul>
       <div class="search">
         <input type="text" />
