--- a/mainsub.html
+++ b/mainsub.html
@@ -62,6 +62,9 @@
     <div class="sub-menu">
       <ul class="menu">
         <li>
+          <a>홍길동 님</a>
+        </li>
+        <li>
           <a id="lgin" href="#" onclick="location.href='index.html'">Sign Out</a>
         </li>
         <li>
