--- a/signin/Mypage.html
+++ b/signin/Mypage.html
@@ -46,29 +46,11 @@
                       <div class="board_list" id="postList">
                         <!-- 여기에 동적으로 게시글이 추가될 것입니다. -->
                         <div class="top">
-                            <div class="num">번호</div>
-                            <div class="title">제목</div>
-                            <div class="writer">글쓴이</div>
-                            <div class="date">작성일</div>
-                            <div class="count">조회</div>
+                            <div class="num">자격증 이름</div>
+                            <div class="title">취득일</div>
                         </div> 
                       </div>
                       <!-- 페이지네이션 등의 UI 요소도 추가 가능 -->
-                      <div class="board_page">
-                        <a href="#" class="bt first"><<</a>
-                        <a href="#" class="bt prev"><</a>
-                        <a href="#" class="num on">1</a>
-                        <a href="#" class="num">2</a>
-                        <a href="#" class="num">3</a>
-                        <a href="#" class="num">4</a>
-                        <a href="#" class="num">5</a>
-                        <a href="#" class="bt next">></a>
-                        <a href="#" class="bt last">>></a>
-                      </div>
-                      <div class="bt_wrap">
-                        <a href="write.html" class="on">등록</a>
-                        <!--<a href="#">수정</a>-->
-                      </div>
                     </div>
                   </div>
                 </main>
