--- a/signin/Mypage.html
+++ b/signin/Mypage.html
@@ -20,7 +20,7 @@
     <div class="Mybody">
               <main id="main-holder">
                
-                <h1 id="mypage-header">마이 페이지</h1>
+                <h1 id="mypage-header">마이 페이지</h1><br/><br/>
                 
                 <form id="mypage-form">
                   <div>
