--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
   <script defer src="./js/youtube.js"></script>
   <script defer src="./js/main.js"></script>
   <script src="./js/includeHTML.js" defer></script>
+  <script src="./js/login.js" defer></script>
    <!--헤더 푸터 나누는부분-->
 </head>
 <body>
