--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <meta property="twitter:title" content="LicenseLab" />
   <meta property="twitter:description" content="당신의 자격증을 책임지는곳, LicenseLab" />
   <meta property="twitter:image" content="./favicon.png" />
-  <meta property="twitter:url" content="https://epic-darwin-271c77.netlify.app" />
+  <meta property="twitter:url" content="https://kimwoojin0081.github.io/LicenseLab" />
   <title>Lisence Lab</title>
   <link rel="icon" href="/LicenseLab/favicon.png" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
