--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta property="og:title" content="LicenseLab" />
   <meta property="og:description" content="당신의 자격증을 책임지는곳, LicenseLab" />
   <meta property="og:image" content="./favicon.png" />
-  <meta property="og:url" content="https://epic-darwin-271c77.netlify.app" />
+  <meta property="og:url" content="https://kimwoojin0081.github.io/LicenseLab" />
   <!-- Twitter Cards -->
   <meta property="twitter:card" content="summary" />
   <meta property="twitter:site" content="LicenseLab" />
