--- a/board/write.html
+++ b/board/write.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>게시판</title>
     <link rel="stylesheet" href="/LicenseLab/css/css.css">
+    <script src="/LicenseLab/js/server.js" defer></script>
 </head>
 <body>
     <div class="board_wrap">
@@ -37,7 +38,7 @@
                 </form>
             </div>
             <div class="bt_wrap">
-                <button href = "list.html" type="button" onclick="submitPost()">등록</button>
+                <button type="button" onclick="submitPost()">등록</button>
                 <a href="list.html">취소</a>
             </div>
         </div>
