--- a/signin/licwrite.html
+++ b/signin/licwrite.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>자격증 등록</title>
-    <link rel="stylesheet" href="/LicenseLab/css/css.css">
+    <link rel="stylesheet" href="/LicenseLab/css/Mypage.css">
 </head>
 <body>
     <div class="board_wrap">
@@ -30,7 +30,7 @@
             </div>
             <div class="bt_wrap">
                 <button href = "list.html" type="button" onclick="submitPost()">등록</button>
-                <a href="list.html">취소</a>
+                <a href="Mypage.html">취소</a>
             </div>
         </div>
     </div>
