<img src="./images/pages/4.jpg" href="./pages/TOEICsub.html"  />

--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
 
       </div>
       <div class="swiper-slide">
-        <img src="./images/pages/4.jpg" alt="따뜻한 아메리카노를 주문하면, 달콤한 초코칩 쿠기 1+1 기간: 2025년 12월 16일 하루만" />
+        <img src="./images/pages/4.jpg" href="./pages/TOEICsub.html"  />
         <a href="javascript:void(0)" class="btn">자세히 보기</a>
 
       </div>
