onclick="location.href='signin/login.html'"

--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
 
       </div>
       <div class="swiper-slide">
-        <img src="./images/pages/4.jpg" href="./pages/TOEICsub.html"  />
+        <img src="./images/pages/4.jpg" onclick="location.href='signin/login.html'"  />
         <a href="javascript:void(0)" class="btn">자세히 보기</a>
 
       </div>
