--- a/index.html
+++ b/index.html
@@ -342,24 +342,40 @@
         <a href="javascript:void(0)" class="btn">자세히 보기</a>
       </div>
       <div class="swiper-slide">
-        <img src="./images/pages/3.jpg" alt="뉴이어, 헤로피 커피와 함께 즐겁고 활기차게 시작하세요! 기간: 2023년 1월 1일 ~ 2월 14일" />
+        <img src="./images/pages/2.jpg" onclick="location.href='./pages/Linuxsub.html'" />
         <a href="javascript:void(0)" class="btn">자세히 보기</a>
-
       </div>
       <div class="swiper-slide">
-        <img src="./images/pages/4.jpg" onclick="location.href='signin/login.html'"  />
+        <img src="./images/pages/3.jpg" onclick="location.href='./pages/정처기sub.html'" />
         <a href="javascript:void(0)" class="btn">자세히 보기</a>
-
       </div>
       <div class="swiper-slide">
-        <img src="./images/pages/5.jpg" alt="행사 기간동안 음료 주문시, 모든 디저트 80% 할인! 기간: 2023년 4월 1일 ~ 2024년 4월 1일" />
+        <img src="./images/pages/4.jpg" onclick="location.href='./pages/그래픽스sub.html'"  />
         <a href="javascript:void(0)" class="btn">자세히 보기</a>
-      
       </div>
       <div class="swiper-slide">
-        <img src="./images/pages/6.jpg" alt="골드 회원 가입시, 따뜻한 코코아를 무료로 드립니다. 기간: 2024년 1월 24일 ~ 1월 30일" />
+        <img src="./images/pages/5.jpg" onclick="location.href='./pages/GTQsub.html'"  />
         <a href="javascript:void(0)" class="btn">자세히 보기</a>
-
+      </div>
+      <div class="swiper-slide">
+        <img src="./images/pages/6.jpg" onclick="location.href='./pages/ITQsub.html'"  />
+        <a href="javascript:void(0)" class="btn">자세히 보기</a>
+      </div>
+      <div class="swiper-slide">
+        <img src="./images/pages/17.jpg" onclick="location.href='./pages/TOEICsub.html'"  />
+        <a href="javascript:void(0)" class="btn">자세히 보기</a>
+      </div>
+      <div class="swiper-slide">
+        <img src="./images/pages/7.jpg" onclick="location.href='./pages/컴활sub.html'"  />
+        <a href="javascript:void(0)" class="btn">자세히 보기</a>
+      </div>
+      <div class="swiper-slide">
+        <img src="./images/pages/22.jpg" onclick="location.href='./pages/Bigdatasub.html'"  />
+        <a href="javascript:void(0)" class="btn">자세히 보기</a>
+      </div>
+      <div class="swiper-slide">
+        <img src="./images/pages/21.jpg" onclick="location.href='./pages/한국사sub.html'"  />
+        <a href="javascript:void(0)" class="btn">자세히 보기</a>
       </div>
     </div>
   </div>
