--- a/signin/Mypage.html
+++ b/signin/Mypage.html
@@ -23,7 +23,7 @@
                 <h1 id="mypage-header">마이 페이지</h1><br/>
                 
                 <form id="mypage-form">
-                  <table id="mypage_body" border="3" cellpadding="10" cellspacing="0" width="400">
+                  <table id="mypage_body" border="3">
                     <thead id="user_info"> 회원정보 </thead>
                     <tbody>
                       <tr>
