--- a/signin/Mypage.html
+++ b/signin/Mypage.html
@@ -20,7 +20,7 @@
     <div class="Mybody">
               <main id="main-holder">
                
-                <h1 id="mypage-header">마이 페이지</h1><br/>
+                <h1 id="mypage-header">마이 페이지</h1>
                 
                 <form id="mypage-form">
                   <table id="mypage_body" border="3">
@@ -28,23 +28,23 @@
                     <tbody>
                       <tr>
                         <td>아이디</td>
-                        <td><strong id="user_id">admin</strong></td>
+                        <td id="user_id">admin</td>
                       </tr>
                       <tr>
                         <td>비밀번호</td>
-                        <td><strong id="user_psw">*****</strong></td>
+                        <td id="user_psw">*****</td>
                       </tr>
                       <tr>
                         <td>이름</td>
-                        <td><strong id="user_name">홍길동</strong></td>
+                        <td id="user_name">홍길동</td>
                       </tr>
                       <tr>
                         <td>휴대폰 번호</td>
-                        <td><strong id="user_num">010-1234-1234</strong></td>
+                        <tdid="user_num">010-1234-1234</td>
                       </tr>
                       <tr>
                         <td>이메일</td>
-                        <td><strong id="user_email">email@naver.com</strong></td>
+                        <td id="user_email">email@naver.com</td>
                       </tr>
                     </tbody>
                   </table>
