--- a/board/listsub.html
+++ b/board/listsub.html
@@ -19,7 +19,7 @@
   <script src="/LicenseLab/js/main.js"></script>
 </head>
 <body>
-  <header data-include="/LicenseLab/include/header.html"></header>
+  <header data-include="/LicenseLab/include/headersub.html"></header>
   <div class="lgbody">
     <main id="main-holder">
       <div class="board_wrap">
@@ -43,7 +43,7 @@
           <!-- 페이지네이션 등의 UI 요소도 추가 가능 -->
           <div class="board_page"></div>
           <div class="bt_wrap">
-            <a href="write.html" class="on">등록</a>
+            <a href="../signin/login.html" class="on">등록</a>
             <!--<a href="#">수정</a>-->
           </div>
         </div>
