--- a/board/write.html
+++ b/board/write.html
@@ -8,6 +8,7 @@
     <script src="/LicenseLab/js/server.js" defer></script>
 </head>
 <body>
+    <header data-include="/LicenseLab/include/header.html"></header>
     <div class="board_wrap">
         <div class="board_title">
             <strong>게시판</strong>
@@ -43,6 +44,7 @@
             </div>
         </div>
     </div>
+    <footer data-include="/LicenseLab/include/footer.html"></footer>
 
     <script>
         function submitPost() {
