--- a/board/write.html
+++ b/board/write.html
@@ -4,7 +4,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>게시판</title>
     <link rel="stylesheet" href="/LicenseLab/css/css.css">
+    <link rel="stylesheet" href="/LicenseLab/css/main.css">
     <script src="/LicenseLab/js/includeHTML.js" defer></script>
+    <script src="/LicenseLab/js/main.js"></script>
     <script src="/LicenseLab/js/server.js" defer></script>
 </head>
 <body>
